--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nodemailer": "^6.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet-async": "^1.1.2",
     "react-router-dom": "^5.3.0",
     "web-vitals": "^1.1.1",
     "yup": "^0.32.9"
