--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "formik": "^2.2.6",
+    "google-auth-library": "^7.10.3",
+    "mongoose": "^6.0.14",
     "nodemailer": "^6.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
