--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nodemon": "^2.0.20",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-recaptcha-v3": "^1.10.0",
     "react-helmet-async": "^1.1.2",
     "react-router-dom": "^5.3.0",
     "web-vitals": "^1.1.1",
